--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,34 +7,26 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_PREFIX_PATH "C:\\Qt\\6.5.3\\mingw_64\\")
 
-
-find_package(Boost REQUIRED)
 find_package(OpenSSL REQUIRED)
-
 find_package(Qt6 COMPONENTS
         Core
         Gui
         Widgets
+        Network
         REQUIRED)
 
-add_executable(asio_client main.cpp ChatWindow.cpp ChatClient.cpp)
-include_directories(asio_client ${Boost_INCLUDE_DIRS})
+set(sources main.cpp ChatWindow.cpp ChatClient.cpp)
+set(libs OpenSSL::SSL Qt::Core Qt::Gui Qt::Widgets Qt::Network)
 
-target_link_libraries(asio_client
-        Qt::Core
-        Qt::Gui
-        Qt::Widgets
-        ws2_32
-        wsock32
-        OpenSSL::SSL
-        )
+add_executable(asio_client ${sources})
+target_link_libraries(asio_client ${libs})
 
-set_target_properties(asio_client PROPERTIES
-        WIN32_EXECUTABLE TRUE
-        MACOSX_BUNDLE TRUE
-        )
+#set_target_properties(asio_client PROPERTIES
+#        WIN32_EXECUTABLE TRUE
+#        MACOSX_BUNDLE TRUE
+#        )
 
-if (WIN32 AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
+if (WIN32)
     set(DEBUG_SUFFIX)
     if (MSVC AND CMAKE_BUILD_TYPE MATCHES "Debug")
         set(DEBUG_SUFFIX "d")
@@ -55,7 +47,7 @@ if (WIN32 AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
                 "${QT_INSTALL_PATH}/plugins/platforms/qwindows${DEBUG_SUFFIX}.dll"
                 "$<TARGET_FILE_DIR:${PROJECT_NAME}>/plugins/platforms/")
     endif ()
-    foreach (QT_LIB Core Gui Widgets)
+    foreach (QT_LIB Core Gui Widgets Network)
         add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
                 COMMAND ${CMAKE_COMMAND} -E copy
                 "${QT_INSTALL_PATH}/bin/Qt6${QT_LIB}${DEBUG_SUFFIX}.dll"
